Import of KCOWGILL/Test-StubGenerator-0.9.2 from CPAN.
gitpan-cpan-distribution: Test-StubGenerator
gitpan-cpan-version:      0.9.2
gitpan-cpan-path:         KCOWGILL/Test-StubGenerator-0.9.2.tar.gz
gitpan-cpan-author:       KCOWGILL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Test-StubGenerator
 
+0.9.1   August 7, 2007
+        Uploaded to CPAN, many tests failed, realized I needed an option
+        for a user configurable perltidyrc, so added pertidyrc as an option,
+        defaulting to ~/.perltidyrc.
+
 0.9.0   August 1, 2007
         First version checked into repository.
 
