Import of KCOWGILL/Test-StubGenerator-0.9.5 from CPAN.
gitpan-cpan-distribution: Test-StubGenerator
gitpan-cpan-version:      0.9.5
gitpan-cpan-path:         KCOWGILL/Test-StubGenerator-0.9.5.tar.gz
gitpan-cpan-author:       KCOWGILL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Test-StubGenerator
 
+0.9.5   August 13, 2007
+        Removed the debugging code I accidentally left enabled :(
+
 0.9.4   August 13, 2007
         Added TODO file to keep track of ideas I want to implement,
         even though it's not really very full.  Added examples directory
