--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Test-StubGenerator
 
+0.9.6   August 26, 2009
+        Took the option to tidy the generated test code out of
+        the tests due to too many test failures from various
+        conflicting perltidyrc files.
+
 0.9.5   August 13, 2007
         Removed the debugging code I accidentally left enabled :(
 
