--- a/README
+++ b/README
@@ -52,7 +52,7 @@ You can also look for information at:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2007 Kent Cowgill
+Copyright (C) 2007-2009 Kent Cowgill
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
